Many implementations and changes
[*] Fully implemented the Module System in the module package. Modules
are providing classes of HttpServlet and Service<T> as well as Entities
in order to extend the base functionality of NightWeb.
Implemented NightWebCore and the classes responsible for handling the
web server, in this case Jetty as embedded server, in order to register
servlets.